<resources>
    <string name="English">Value</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_created_at">Created At:</string>
    <string name="account_expiry_date">Expiry Date:</string>
    <string name="account_info">ACCOUNT INFO</string>
    <string name="account_info_small">Account Info</string>
    <string name="account_is_trial">Is Trial:</string>
    <string name="account_max_connections">Max Connections:</string>
    <string name="account_status">Account Status:</string>
    <string name="account_username">Username:</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">Activation Code</string>
    <string name="active_channel">Loading…</string>
    <string name="add_category_to_lock">Add Category to lock</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="seasons_cards">Seasons</string>
    <string name="alert_mx_player">MX Player needs to be installed!</string>
    <string name="alert_x_player">XPlayer needs to be installed!</string>
    <string name="alert_vlc_player">VLC Player needs to be installed!</string>
    <string name="all">ALL</string>
    <string name="allmov">ALL MOVIES</string>
    <string name="allser">ALL SERIES</string>
    <string name="all_channel">Show All Channels</string>
    <string name="app_id">4F8B3483</string>
    <string name="app_name">Liveit - Android</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="automati_first">Auto-Update Channels &amp; VOD daily</string>
    <string name="automati_second">Auto-Update EPG</string>
    <string name="automation">Automation</string>
    <string name="back_button">Back</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bt_save">SUBMIT</string>
    <string name="bt_submit">SAVE</string>
    <string name="can_not_play">can not play this video</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_small">Cancel</string>
    <string name="cast">Cast</string>
    <string name="categories">LIVE CATEGORIES</string>
    <string name="channel_name">Channel Name</string>
    <string name="channels_with_epg">Show Channels only with EPG</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="client_username">Username</string>
    <string name="close">Close</string>
    <string name="closeDrawer">close</string>
    <string name="close_ticket">CLOSE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="credential_detail">Enter Your Login Details</string>
    <string name="date_time">22:00</string>
    <string name="details">"Request Username/Password from your TV Service Provider"</string>
    <string name="diected_by">Directed By:</string>
    <string name="mov_duration">Duration:</string>
    <string name="mov_year">Year:</string>
    <string name="mov_seasons">Seasons</string>
    <string name="mov_genre">Genre:</string>
    <string name="mov_cast">Cast:</string>
    <string name="mov_state">State:</string>
    <string name="mov_end">Fim:</string>
    <string name="mov_read_more">Read More</string>
    <string name="downloading_all_channels">Downloading Channels, VOD and Series</string>
    <string name="downloading_epg">Downloading TV Guide</string>
    <string name="drawer_account_info">ACCOUNT INFO</string>
    <string name="drawer_home">HOME</string>
    <string name="drawer_live_tv">LIVE TV</string>
    <string name="drawer_open">menu_toggle</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_support">SUPPORT</string>
    <string name="drawer_vod">VIDEO ON DEMAND</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="enter_confirm_password_error">Pleas Enter Confirm Password</string>
    <string name="enter_new_password_error">Pleas fill New Password</string>
    <string name="enter_password_error">Please enter your password</string>
    <string name="enter_username_error">Please enter your username</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="epg_imported">TV Guide Imported Successfully!</string>
    <string name="epg_required_for_archive">For TV ARCHIVE, please keep EPG up to date depends on numbers of days your provider store</string>
    <string name="epg_timeline">EPG Timeline</string>
    <string name="episodes">EPISODES</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_player">ExoPlayer</string>
    <string name="favourite">FAVOURITE</string>
    <string name="favourites">FAVOURITES</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_bold">sans-serif-bold</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>
    <string name="hls_m3u8">HLS (.m3u8)</string>
    <string name="ijk_player">Built-in Player 1 ( Default )</string>
    <string name="ijkplayer_dummy" />
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="importign_all_channels">Inserting Channels, VOD and Series</string>
    <string name="importing_epg">Inserting TV Guide</string>
    <string name="importing_livestreams_cat">Loading Channels Categories</string>
    <string name="importing_vod_cat">Loading VOD Categories</string>
    <string name="install_it">Install it</string>
    <string name="invalid_activation_code">Invalid Activation code</string>
    <string name="invalid_details">Invalid Username or Password</string>
    <string name="invalid_old_password">Invalid old password, Please try again</string>
    <string name="invalid_request">Invalid Request</string>
    <string name="invalid_server_response">Invalid Server Response</string>
    <string name="invalid_status">Your Account is</string>
    <string name="invalid_url">Please correct your Site URL and try again</string>
    <string name="layout_selection">Layout Selection</string>
    <string name="layout_selection_setting">Layout Selection</string>
    <string name="load_channels_vod">Refresh Channels, VOD and Series</string>
    <string name="load_tv_guide">Refresh TV Guide</string>
    <string name="lock_category">Security</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="sales_email">sales@whmcssmarters.com</string>
    <string name="sales_label">Sales:</string>
    <string name="setting_epg_channels_first">Please wait, while we are getting things ready for the first time</string>
    <string name="skip_hint">Skip it for running the process in the background</string>
    <string name="skip_import_epg">SKIP</string>
    <string name="support">SUPPORT</string>
    <string name="support_email">support@whmcssmarters.com</string>
    <string name="support_label">Support:</string>
    <string name="tip">Tip : You can update your EPG data anytime</string>
    <string name="update_password">Update Password</string>
    <string name="website_label">Website:</string>
    <string name="website_url">+91 7589112968</string>
    <string name="website_url_value">www.whmcssmarters.com</string>
    <string name="whatsapp_label">WhatsApp:</string>
</resources>