<?xml version="1.0" encoding="utf-8"?>
<menu>
    <!--<item n1:id="@id/action_logout" n1:orderInCategory="100" n1:title="@string/menu_logout" n2:showAsAction="never"
      xmlns:n1="http://schemas.android.com/apk/res/android" xmlns:n2="http://schemas.android.com/apk/res-auto" />-->
    <item n3:icon="@drawable/home_icon_black" n3:id="@id/nav_home" n3:title="@string/menu_home"
      xmlns:n3="http://schemas.android.com/apk/res/android" />
    <item n4:id="@id/menu_load_channels_vod" n4:title="@string/load_channels_vod"
      xmlns:n4="http://schemas.android.com/apk/res/android" />
    <item n5:icon="@mipmap/ic_launcher" n5:id="@id/menu_load_tv_guide" n5:title="@string/load_tv_guide" n6:showAsAction="withText"
      xmlns:n5="http://schemas.android.com/apk/res/android" xmlns:n6="http://schemas.android.com/apk/res-auto" />
    <item n7:icon="@drawable/settings_icon_black" n7:id="@id/nav_settings" n7:title="@string/menu_settings"
      xmlns:n7="http://schemas.android.com/apk/res/android" />
</menu>